--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,13 +79,21 @@ flutter:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins-Medium.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+#         - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Rosarivo
+      fonts:
+        - asset: fonts/Rosarivo-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+    - family: OpenSans
+      fonts:
+        - asset: fonts/OpenSans-VariableFont_wdth,wght.ttf
+
+    - family: Solway
+      fonts:
+        - asset: fonts/Solway-Medium.ttf
+
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
